Report modal centered issue on IE

--- a/_sass/includes/_layout.scss
+++ b/_sass/includes/_layout.scss
@@ -1218,6 +1218,7 @@ hr.dividers {
         max-height: 100vh;
         max-width: initial;
         width: auto;
+        margin : 0px;
     }
     .instructions {
         max-width: 320px;
